modularized it and fixed the responsive menu not showing up.

--- a/modules/_variables.less
+++ b/modules/_variables.less
@@ -1,15 +1,15 @@
 // Colors
-@primary-color: #0b8eba;
-@secondary-color: #e0665f;
 
-// @primary-color-dark: darken(@primary-color, 10%);
-// @primary-color-light: lighten(@primary-color, 25%);
-@primary-color-dark: #00618a;
-@primary-color-light: #5bbeed;
-// @secondary-color-dark: darken(@secondary-color, 30%);
-// @secondary-color-light: lighten(@secondary-color, 25%);
+@primary-color: #ffffff;
+@primary-color-dark: #dfdfde;
+@primary-color-light: #fbfbfb;
+
+@secondary-color: #e0665f;
 @secondary-color-dark: #a93635;
 @secondary-color-light: #ff978c;
+
+@primary-font-color: black;
+@secondary-font-color: black;
 
 // // Typography
 // // Sizes
@@ -77,8 +77,5 @@
 // mine
 @heading-font: 'Copse', serif;
 @body-font: 'Rubik', sans-serif;
-
-@primary-font-color: black;
-@secondary-font-color: white;
 
 // Borders
