--- a/modules/header.less
+++ b/modules/header.less
@@ -1,6 +1,7 @@
 .site-header {
   height: @magicNumber * 3;
   position: relative;
+  background-color: @primary-color;
 }
 .flash-wrap {
   & img {
@@ -13,7 +14,7 @@
     text-decoration: none;
     color: @primary-font-color;
     &:hover {
-      background: @secondary-color-dark;
+      background: @primary-color-dark;
       color: @secondary-font-color;
     }
   }
